name:                   airship-route-bench
synopsis:               A microbenchmark test for Airship's routing
description:            A microbenchmark test for Airship's routing
version:                0.0.0.1
license:                MIT
license-file:           LICENSE
author:                 Kelly McLaughlin
maintainer:             kelly@kelly-mclaughlin.com
category:               Web
build-type:             Simple
cabal-version:          >=1.10

executable              airship-route-bench
  main-is:              RouteTest.hs
  ghc-options:          -Wall -threaded -O2 -main-is RouteTest
  default-language:     Haskell2010
  hs-source-dirs:     .
  build-depends:        airship
                      , base
                      , criterion
                      , mtl
                      , text
                      , unordered-containers
